# fastapi-for-intern

./: Dockerfile  main.py  private.pem  public.pem  pyproject.toml  test.db
