[project]
name = "fastaf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[all]>=0.136.1",
    "passlib[bcrypt]==1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy[all]>=2.0.49",
]
